# slancha-mesh

./: AGENTS.md  JAMES_NODE_SETUP.md  NODE_SETUP.md  NOTICE  ONBOARDING.md  README.md  SESSION_LOG_2026_05_25.md  pyproject.toml
.github/workflows/: ci.yml  cross-repo-schema-pin.yml
analysis/: MESH_REPLAY_V003_2026_05_16.md  mesh_replay_v003_forced_code.jsonl  mesh_replay_v003_honest.jsonl  mesh_routed_real_sample_v003.jsonl
analysis/live_smoke_v005/checkpoints/qwen3-coder-30b-a3b-fp8/2026-05-16T17-25-17.265328+00-00/: meta.json  state_dict.json
corpus/training/v3/: manifest.json
corpus/training/v3.1/: .gitignore  manifest.json
corpus/training/v3.1-mmbert/: manifest.json
docker/: Dockerfile  docker-compose.yml
docs/: AGENT_ONBOARDING_CHAIN_2026_05_25.md  CATALOG_STATUS.md  CURATION.md  GATE-CONTRACT.md  GB10_TRAINING_PREFLIGHT.md  HOMELAB.md  MESH_ONELINE_SETUP_PROPOSAL_2026_05_25.md  MESH_TAILNET_SURVEY_2026_05_25.md  MESH_V003_BUILD_2026_05_16.md  MESH_V005_BUILD_2026_05_16.md  PIPELINE_DIAGRAM_SPEC.md  SELF_ORGANIZING_LOOP_SCOPE.md  SIZING_BANDWIDTH_BRIEF.md  SLANCHA_PROTOCOL_v0.1_DRAFT.md  UPGRADE.md  WINDOWS.md
docs/lanes/: README.md  lane-3-judge-holdout.SKILL.md  lane-handoff-contract.md
mesh/: __init__.py  allocator.py  audit.py  auth.py  backends.py  cli.py  curation.py  discovery.py  engine_select.py  event_store.py  generator.py  grading.py  identity.py  idle.py  loop_runner.py  models.py  node_server.py  probe.py  quality_probe.py  registry.py  registry_app.py  replay_store.py  router_app.py  router_bootstrap.py  select.py  serve.py  service.py  tailnet.py  training.py  url_guard.py  validate_card.py
mesh/catalog/: deepseek-coder-v2-16b-lite-q4-ollama.toml  gemma-2-9b-q4-ollama.toml  llama-3.1-8b-instruct-q4.toml  llama-3.1-8b-instruct-q5-ollama.toml  mistral-nemo-12b-q4-ollama.toml  paul-voice-v7d.toml  paul-voice-v8.toml  phi-3.5-mini-q5-ollama.toml  phi-4-14b-q4.toml  qwen2.5-coder-7b-q4-ollama.toml  qwen3-coder-30b-a3b-foundry.toml  qwen3-coder-30b-a3b-fp8.toml
mesh/contracts/: __init__.py  mesh_usage_event.json
mesh/dashboard/: __init__.py  cost.py  live_run.py  oracle.py  panels.py  streamlit_app.py
mesh/deploy/: gb10-safe-clocks.service  install_dashboard.sh  install_mesh_registry.sh  install_nightly_smoke.sh  mesh-dashboard-tunnel-config.yml.example  mesh-dashboard-tunnel.service  mesh-dashboard.service  mesh-nightly-smoke.service  mesh-nightly-smoke.timer  mesh-registry.service
mesh/eval/: gate.py  row_sign.py  runner.py  seed_verify.py  spotcheck.py
mesh/gpu/: __init__.py  cli.py  cluster.py  probe.py  reservations.py
mesh/scripts/: bring-up-multi-spark.sh  bring-up-spark.sh  build_corpus_v3.py  build_corpus_v3_1.py  live_training_smoke.py  mesh_doctor.py  mesh_replay.py  nightly_smoke.py  preclassify_corpus.py
mesh/tests/: test_allocator.py  test_audit.py  test_auth.py  test_backends.py  test_backends_llamacpp_mlx.py  test_build_corpus_v3.py  test_build_corpus_v3_1.py  test_catalog.py  test_cli.py  test_cross_repo_usage_event.py  test_curation.py  test_dashboard_cost.py  test_dashboard_eval.py  test_dashboard_live_run.py  test_dashboard_oracle.py  test_dashboard_panels.py  test_discovery.py  test_engine_select.py  test_eval_gate.py  test_eval_row_sign.py  test_eval_runner.py  test_eval_seed_verify.py  test_event_store.py  test_failures_live.py  test_generator.py  test_gpu.py  test_grading.py  test_idle.py  test_loop_runner.py  test_membership_e2e.py  test_mesh_doctor.py  test_nightly_smoke.py  test_node_identity.py  test_node_server.py  test_probe.py  test_protocol_compatibility.py  test_quality_probe.py  test_registry.py  test_registry_app.py  test_registry_app_integration.py  (+18 more)
