[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slancha-mesh"
version = "0.0.6"
description = "Mesh of specialist small models on user hardware, fronted by Slancha's classifier-driven router."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "SlanchaAi", email = "team@slancha.ai"}]
requires-python = ">=3.11"

dependencies = [
  "httpx>=0.27",
  "pydantic>=2.5",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "tomli>=2.0; python_version < '3.11'",
  "psutil>=5.9",
]

[project.optional-dependencies]
serve = [
  "vllm>=0.17",
]
dashboard = [
  "streamlit>=1.30",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["mesh"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["mesh/tests"]
