[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slancha-mesh"
version = "0.0.6"
description = "Mesh of specialist small models on user hardware, fronted by Slancha's classifier-driven router."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "SlanchaAi", email = "team@slancha.ai"}]
requires-python = ">=3.11"
keywords = ["llm", "inference", "mesh", "routing", "specialist", "vllm", "local-llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: System :: Distributed Computing",
]

dependencies = [
  "httpx>=0.27",
  "pydantic>=2.5",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "psutil>=5.9",
]

[project.urls]
Homepage = "https://slancha.ai"
Repository = "https://github.com/SlanchaAi/slancha-mesh"
"Bug Tracker" = "https://github.com/SlanchaAi/slancha-mesh/issues"

[project.scripts]
slancha-mesh = "mesh.cli:main"
slancha-mesh-validate = "mesh.validate_card:main"
slancha-mesh-gate = "mesh.eval.gate:main"
mesh-gpu = "mesh.gpu.cli:main"
mesh-doctor = "mesh.scripts.mesh_doctor:main"

[project.optional-dependencies]
serve = [
  "vllm>=0.17",
]
train = [
  # Real LoRA/PEFT fine-tune leg (issue #65). Heavy + GPU-oriented, so it
  # is an opt-in extra: the package imports and the test suite run without
  # it installed (the real training path imports these lazily). Install with
  #   pip install -e ".[train]"
  "torch>=2.2",
  "transformers>=4.40",
  "peft>=0.10",
  "datasets>=2.18",
  "accelerate>=0.29",
]
dashboard = [
  "streamlit>=1.30",
]
signing = [
  # Ed25519 for node identity (#102) + eval-row/holdout signing (#104). Opt-in:
  # mesh.identity / mesh.eval.seed_verify import it lazily, so the package + the
  # default test suite run without it (those features just stay unavailable).
  #   pip install -e ".[signing]"
  "pynacl>=1.5",
]
loop = [
  # The traffic-cluster → experiment-spec generator (issue #87) reuses the
  # embedding/clustering substrate from the PUBLIC slancha-local package rather
  # than vendoring ~1000 lines of ML code (which would be a second parity-mirror
  # to drift, after the gate mirror). "Everything in the container": this extra
  # bundles slancha-local INTO the mesh image so the whole loop is one
  # deployable unit. `mesh.generator` imports it lazily — the package + test
  # suite run without this extra installed.
  "slancha-local @ git+https://github.com/SlanchaAi/slancha-local",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "jsonschema>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["mesh"]

[tool.hatch.metadata]
# The `[loop]` extra pins slancha-local by git URL (a direct reference) so the
# generator's clustering substrate bundles into the image without a PyPI
# release. Hatchling requires this opt-in to allow a non-PyPI dependency.
allow-direct-references = true

[tool.ruff]
# Pin the parse target so the `ruff check mesh/` CI gate behaves the same
# across ruff versions. Default lint rule set (pyflakes + a pycodestyle
# subset) is kept deliberately — broadening `select` is a separate call.
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["mesh/tests"]
